--- a/src/pages/sales-app/new-lead/lms-lead-add/lms-lead-add.html
+++ b/src/pages/sales-app/new-lead/lms-lead-add/lms-lead-add.html
@@ -355,7 +355,7 @@
             itemTextField="company_name"
             name="company_name"
             [canSearch]="true"
-            #RetailerSelectable
+            #RetailerSelectablez
              required>
         </ionic-selectable>
           </ion-item>
